--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ services:
 
 before-install:
   - docker build -t bahar444/docker-react -f Dockerfile.dev .
+
+script:
+  - docker run -e CI=true bahar444/docker-react npm run test
